--- a/layouts/partials/contact.html
+++ b/layouts/partials/contact.html
@@ -1,8 +1,6 @@
 {{ if .Site.Data.homepage.contact.enable }}
 {{ with .Site.Data.homepage.contact }}
-<section id="contact-us" {{ if .overlay }} class="overlay" {{ end }}>
-<picture>
-	<img class="img-responsive" src="{{ .bgImage | absURL }}">
+<section id="contact-us" {{ if .overlay }} class="overlay" {{ end }}   style="background-image: url('{{ .bgImage | absURL }}');">
   <div class="container" >
 		<div class="row">
 			<div class="col-md-12" >
@@ -26,7 +24,6 @@
 			</div><!-- .col-md-12 close -->
 		</div><!-- .row close -->
 	</div><!-- .container close -->
-</picture>
 </section><!-- #contact-us close -->
 {{end}}
 {{end}}
