--- a/layouts/partials/contact.html
+++ b/layouts/partials/contact.html
@@ -1,6 +1,8 @@
 {{ if .Site.Data.homepage.contact.enable }}
 {{ with .Site.Data.homepage.contact }}
-<section id="contact-us" {{ if .overlay }} class="overlay" {{ end }}   style="background-image: url('{{ .bgImage | absURL }}');">>
+<section id="contact-us" {{ if .overlay }} class="overlay" {{ end }}>
+<img class="img-responsive" src="{{ .bgImage | absURL }}">
+
   <div class="container" >
 		<div class="row">
 			<div class="col-md-12" >
