--- a/layouts/partials/blog.html
+++ b/layouts/partials/blog.html
@@ -14,7 +14,7 @@
 								<img src="{{ .Params.Image | absURL }}" alt="post-image" class="img-responsive">
 							</div>
 							<div class="content-right">
-								<h3><a href="{{ .Permalink }}">{{ .Title }}</a></h3>
+								<h3><a href=" ">{{ .Title }}</a></h3>
 								<p>{{ .Summary }}</p>
 							</div>
 						</li>
