--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,77 +1,72 @@
 {{ if .Site.Params.footer.enable }}
 <section id="footer">
-	<div class="container">
-		<div class="row">
-			<div class="col-md-4">
-				<div class="block wow fadeInLeft" data-wow-delay="200ms">
-					<h3>{{ with .Site.Params.footer.contactInfoTitle }} {{ . | safeHTML }} {{ end }}</h3>
-					<div class="info">
-						<ul>
-							{{ range $.Site.Params.footer.contactItem }}
-							<li>
-								<h4><i class="{{.icon}}"></i>{{ .title }}</h4>
-								<p>{{ .content | markdownify }}</p>
-							</li>
-							{{end}}
-						</ul>
-					</div>
-				</div>
-			</div>
-			<!-- .col-md-4 close -->
-			<div class="col-md-4">
-				<div class="block wow fadeInLeft" data-wow-delay="700ms">
-					<h3>{{ with .Site.Params.footer.blogTitle }} {{ . | safeHTML }} {{ end }}</h3>
-					<div class="blog">
-						<ul>
-							{{ range first 3 (where .Site.Pages "Type" "post") }}
-							{{ "<!-- post -->" | safeHTML }}
-							<li>
-								<h4><a href="{{ .Permalink }}">{{ .Title }}</a></h4>
-								<p>{{ .PublishDate.Format "02 Jan 2006" }}</p>
-							</li>
-							{{ end }}
-						</ul>
-					</div>
-				</div>
-			</div>
-			<!-- .col-md-4 close -->
-			<div class="col-md-4">
-				<div class="block wow fadeInLeft" data-wow-delay="1100ms">
-					<div class="gallary">
-						<h3>{{ with .Site.Params.footer.galleryTitle }} {{ . | safeHTML }} {{ end }}</h3>
-						<ul class="gallery">
-							{{ range $.Site.Params.footer.gallery }}
-							<li><a href="{{ .image | absURL }}" class="venobox" data-gall="footerGallery"><img class="img-responsive"
-										src="{{ .image | absURL }}" alt=""></a></li>
-							{{ end }}
-						</ul>
-					</div>
-					<div class="social-media-link">
-						<h3>{{ with .Site.Params.footer.socialTitle }} {{ . | safeHTML }} {{ end }}</h3>
-						<ul>
-							{{ range $.Site.Params.footer.socialLink }}
-							<li><a href="{{ .link | safeURL }}"><i class="fa fa-{{ .icon }}"></i></a></li>
-							{{ end }}
-						</ul>
-					</div>
-				</div>
-			</div>
-			<!-- .col-md-4 close -->
-		</div><!-- .row close -->
-	</div><!-- .containe close -->
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4">
+                <div class="block wow fadeInLeft" data-wow-delay="200ms">
+                    <h3>{{ with .Site.Params.footer.contactInfoTitle }} {{ . | safeHTML }} {{ end }}</h3>
+                    <div class="info">
+                        <ul>
+                            {{ range $.Site.Params.footer.contactItem }}
+                            <li>
+                                <h4><i class="{{.icon}}"></i>{{ .title }}</h4>
+                                <p>{{ .content | markdownify }}</p>
+                            </li>
+                            {{end}}
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <!-- .col-md-4 close -->
+            <div class="col-md-4">
+                <div class="block wow fadeInLeft" data-wow-delay="700ms">
+                    <h3>{{ with .Site.Params.footer.blogTitle }} {{ . | safeHTML }} {{ end }}</h3>
+                    <div class="maps">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3574.110583012878!2d153.09053611503387!3d-26.387614783356547!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6b9369c044c45277%3A0x3c6b84f006d28753!2sNoosa%20Social%20Espresso%20%26%20Wine%20Bar!5e0!3m2!1sit!2sfr!4v1584903763598!5m2!1sit!2sfr"
+                                frameborder="0" style="border:0;" allowfullscreen=""
+                                aria-hidden="false" tabindex="0"></iframe>
+                    </div>
+                </div>
+            </div>
+            <!-- .col-md-4 close -->
+            <div class="col-md-4">
+                <div class="block wow fadeInLeft" data-wow-delay="1100ms">
+                    <div class="gallary">
+                        <h3>{{ with .Site.Params.footer.galleryTitle }} {{ . | safeHTML }} {{ end }}</h3>
+                        <ul class="gallery">
+                            {{ range $.Site.Params.footer.gallery }}
+                            <li><a href="{{ .image | absURL }}" class="venobox" data-gall="footerGallery"><img
+                                    class="img-responsive"
+                                    src="{{ .image | absURL }}" alt=""></a></li>
+                            {{ end }}
+                        </ul>
+                    </div>
+                    <div class="social-media-link">
+                        <h3>{{ with .Site.Params.footer.socialTitle }} {{ . | safeHTML }} {{ end }}</h3>
+                        <ul>
+                            {{ range $.Site.Params.footer.socialLink }}
+                            <li><a href="{{ .link | safeURL }}"><i class="fa fa-{{ .icon }}"></i></a></li>
+                            {{ end }}
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <!-- .col-md-4 close -->
+        </div><!-- .row close -->
+    </div><!-- .containe close -->
 </section><!-- #footer close -->
 {{ end }}
 
 <footer id="footer-bottom">
-	<div class="container">
-		<div class="row">
-			<div class="col-md-12 col-sm-12">
-				<div class="block">
-					<p>{{ .Site.Params.copyright | markdownify }}</p>
-				</div>
-			</div>
-		</div>
-	</div>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12 col-sm-12">
+                <div class="block">
+                    <p>{{ .Site.Params.copyright | markdownify }}</p>
+                </div>
+            </div>
+        </div>
+    </div>
 </footer>
 
 {{ "<!-- JS Plugins -->" | safeHTML }}
@@ -82,18 +77,18 @@
 {{ "<!-- google analitycs -->" | safeHTML }}
 {{ with .Site.Params.google_analitycs_id }}
 <script>
-	(function (i, s, o, g, r, a, m) {
-		i['GoogleAnalyticsObject'] = r;
-		i[r] = i[r] || function () {
-			(i[r].q = i[r].q || []).push(arguments)
-		}, i[r].l = 1 * new Date();
-		a = s.createElement(o),
-			m = s.getElementsByTagName(o)[0];
-		a.async = 1;
-		a.src = g;
-		m.parentNode.insertBefore(a, m)
-	})(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
-	ga('create', '{{ . }}', 'auto');
-	ga('send', 'pageview');
+    (function (i, s, o, g, r, a, m) {
+        i['GoogleAnalyticsObject'] = r;
+        i[r] = i[r] || function () {
+            (i[r].q = i[r].q || []).push(arguments)
+        }, i[r].l = 1 * new Date();
+        a = s.createElement(o),
+            m = s.getElementsByTagName(o)[0];
+        a.async = 1;
+        a.src = g;
+        m.parentNode.insertBefore(a, m)
+    })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+    ga('create', '{{ . }}', 'auto');
+    ga('send', 'pageview');
 </script>
 {{ end }}
